# Unified3D

./: .clang-format  CMakeLists.txt  vcpkg.json
apps/: CMakeLists.txt  main.cpp
cmake/: build_metallib.cmake
tests/: CMakeLists.txt  Main.cpp  Tests.cpp  Tests.h  main.cpp
tests/core/: CoreTest.cpp  CoreTest.h  Tensor.cpp
tests/test_utility/: Compare.cpp  Compare.h  Print.h  Rand.cpp  Rand.h  Raw.cpp  Raw.h  Sort.cpp  Sort.h
unified3D/: CMakeLists.txt
unified3D/core/: Device.cpp  Device.h
unified3d/: CMakeLists.txt  Macro.h
unified3d/camera/: PinholeCameraIntrinsic.cpp  PinholeCameraIntrinsic.h  PinholeCameraParameters.cpp  PinholeCameraParameters.h  PinholeCameraTrajectory.cpp  PinholeCameraTrajectory.h
unified3d/core/: AdvancedIndexing.cpp  AdvancedIndexing.h  Blob.h  Device.cpp  Device.h  Dispatch.h  Dtype.cpp  Dtype.h  Indexer.cpp  Indexer.h  MemoryManager.cpp  MemoryManager.h  Parallel-inl.h  Parallel.cpp  Parallel.h  Scalar.h  Scheduler.cpp  Scheduler.h  ShapeUtil.cpp  ShapeUtil.h  SizeVector.cpp  SizeVector.h  SmallVector.cpp  SmallVector.h  Stream.h  Tensor.cpp  Tensor.h  TensorCheck.cpp  TensorCheck.h  TensorFunction.cpp  TensorFunction.h  TensorInit.h  TensorKey.cpp  TensorKey.h  TensorList.cpp  TensorList.h
unified3d/core/kernel/: Arange.cpp  Arange.h  ArangeCPU.cpp  ArangeGPU.cpp  BinaryEW.cpp  BinaryEW.h  BinaryEWCPU.cpp  IndexGetSet.cpp  IndexGetSet.h  IndexGetSetCPU.cpp  IndexReduction.cpp  IndexReduction.h  IndexReductionCPU.cpp  Kernel.cpp  Kernel.h  NonZero.cpp  NonZero.h  NonZeroCPU.cpp  Reduction.cpp  Reduction.h  ReductionCPU.cpp  UnaryEW.cpp  UnaryEW.h  UnaryEWCPU.cpp  UnaryEWGPU.cpp
unified3d/core/linalg/: AddMM.cpp  AddMM.h  AddMMCPU.cpp  BlasWrapper.h  Det.cpp  Det.h  Inverse.cpp  Inverse.h  InverseCPU.cpp  LU.cpp  LU.h  LUCPU.cpp  LUImpl.h  LapackWrapper.h  LeastSquares.cpp  LeastSquares.h  LeastSquaresCPU.cpp  LinalgHeadersCPU.h  LinalgUtils.h  Matmul.cpp  Matmul.h  MatmulCPU.cpp  SVD.cpp  SVD.h  SVDCPU.cpp  Solve.cpp  Solve.h  SolveCPU.cpp  Tri.cpp  Tri.h  TriCPU.cpp  TriImpl.h
unified3d/core/linalg/kernel/: Matrix.h  SVD3x3.h
unified3d/data/: Dataset.cpp  Dataset.h
unified3d/geometry/: BoundingVolume.cpp  BoundingVolume.h  EstimateNormals.cpp  Geometry.h  Geometry2D.h  Geometry3D.cpp  Geometry3D.h  HalfEdgeTriangleMesh.cpp  HalfEdgeTriangleMesh.h  ISSKeypoints.cpp  Image.cpp  Image.h  ImageFactory.cpp  IntersectionTest.cpp  IntersectionTest.h  KDTreeFlann.cpp  KDTreeFlann.h  KDTreeSearchParam.h  Keypoint.h  Line3D.cpp  Line3D.h  LineSet.cpp  LineSet.h  LineSetFactory.cpp  MeshBase.cpp  MeshBase.h  Octree.cpp  Octree.h  PointCloud.cpp  PointCloud.h  PointCloudCluster.cpp  PointCloudFactory.cpp  PointCloudPlanarPatchDetection.cpp  PointCloudSegmentation.cpp  Qhull.cpp  Qhull.h  RGBDImage.cpp  RGBDImage.h  RGBDImageFactory.cpp  SurfaceReconstructionAlphaShape.cpp  (+14 more)
unified3d/geometry/tomasakeninemoeller/: opttritri.h  tribox3.h
unified3d/io/: FileFormatIO.cpp  FileFormatIO.h  IJsonConvertibleIO.cpp  IJsonConvertibleIO.h  ImageIO.cpp  ImageIO.h  LineSetIO.cpp  LineSetIO.h  OctreeIO.cpp  OctreeIO.h  PinholeCameraTrajectoryIO.cpp  PinholeCameraTrajectoryIO.h  PointCloudIO.cpp  PointCloudIO.h  TriangleMeshIO.cpp  TriangleMeshIO.h  VoxelGridIO.cpp  VoxelGridIO.h
unified3d/io/file_format/: FileJPG.cpp  FileJSON.cpp  FileLOG.cpp  FileOFF.cpp  FilePNG.cpp  FilePTS.cpp  FileSTL.cpp  FileTUM.cpp  FileXYZ.cpp  FileXYZN.cpp  FileXYZRGB.cpp
unified3d/metal/: Buffer.cpp  Buffer.h  Device.cpp  Device.h  Metal.cpp  Metal.h
unified3d/metal/kernels/: Indexer.h  MiniVec.h  UnaryEW.metal
unified3d/metal/kernels.xcodeproj/: project.pbxproj
unified3d/tensor/io/: NumpyIO.cpp  NumpyIO.h
unified3d/utility/: CPUInfo.cpp  CPUInfo.h  Download.cpp  Download.h  Eigen.cpp  Eigen.h  Extract.cpp  Extract.h  ExtractZIP.cpp  ExtractZIP.h  FileSystem.cpp  FileSystem.h  Helper.cpp  Helper.h  IJsonConvertible.cpp  IJsonConvertible.h  Logging.cpp  Logging.h  MiniVec.h  ProgressBar.cpp  ProgressBar.h  ProgressReporters.h  Random.cpp  Random.h  Timer.cpp  Timer.h
unified3d/visualization/: operations.h  renderer.cpp  renderer.h  windows.cpp  windows.h
unified3d/visualization/ops/: mesh_op.h  point_data_op.h  tree_topology_op.h
